[package]
name = "entorpy_not_included"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = { version = "0.16.1", features = ["serde"] }
serde = { version = "1.0.215", features = ["rc"] }
serde_derive = "1.0.215"
tokio = { version = "1.42.0", features = ["macros", "rt", "sync"] }
uuid = "1.11.0"
